# bach-thesis

./: README.md
ba-graph/: .astylerc  .gitignore  CMakeLists.txt  INSTALL.md  README.md
ba-graph/apps/convert/: Makefile  convert.cpp
ba-graph/apps/filtergraphs/: .gitignore  Makefile  filtergraphs.cpp  filtermultipoles.cpp
ba-graph/apps/showgraph/: .gitignore  Makefile  showgraph.cpp
ba-graph/include/: README.md  algorithms.hpp  basic_impl.hpp  graphs.hpp  invariants.hpp  io.hpp  lib.hpp  multipoles.hpp  operations.hpp  random.hpp  sat.hpp  snarks.hpp  util.hpp
ba-graph/include/algorithms/: cyclic_connectivity.hpp  matchings.hpp  paths.hpp
ba-graph/include/algorithms/isomorphism/: isomorphism.hpp  isomorphism_nauty.hpp
ba-graph/include/algorithms/object_collection/: generation.hpp  object_collection.hpp
ba-graph/include/algorithms/path_decomposition/: path_decomposition.hpp  shortest_path_heuristic.hpp
ba-graph/include/config/: configuration.hpp
ba-graph/include/embeddings/: faces.hpp
ba-graph/include/graphs/: basic.hpp  bipartite.hpp  cpg.hpp  snarks.hpp  stored_graphs.hpp  trees.hpp
ba-graph/include/impl/: README.md  basic.hpp
ba-graph/include/impl/basic/: basic_objects.hpp  classes.h  factory.cpp  factory.h  factory_functions.hpp  graph.cpp  graph.h  helpers.hpp  incidence.cpp  incidence.h  incidence_predicates.hpp  include.hpp  labelings.hpp  mappers.hpp  mapping.hpp  rotation.cpp  rotation.h  rotation_predicates.hpp
ba-graph/include/invariants/: colouring.hpp  connectivity.hpp  degree.hpp  distance.hpp  girth.hpp
ba-graph/include/io/: graph6.hpp  oldBA.hpp  pregraph.hpp  print_nice.hpp
ba-graph/include/multipoles/: common_multipoles.hpp  join.hpp  multipoles.hpp
ba-graph/include/operations/: add_graph.hpp  basic.hpp  copies.hpp  line_graph.hpp  simplification.hpp  undo.hpp
ba-graph/include/random/: random_graphs.hpp  renumber.hpp
ba-graph/include/sat/: cnf.hpp  cnf_circular_colouring.hpp  cnf_circumference.hpp  cnf_colouring.hpp  cnf_factors.hpp  exec_circular_colouring.hpp  exec_circumference.hpp  exec_colouring.hpp  exec_factors.hpp  exec_snarks.hpp  exec_solver.hpp  solver.hpp  solver_bddmsat.hpp  solver_cmsat.hpp
ba-graph/include/snarks/: colouring.hpp  colouring_bit_array.h  colouring_bit_array.hpp  colouring_cvd.hpp  colouring_kowalik.hpp  colouring_nagy.hpp  colouring_pd.hpp  products.hpp  reductions.hpp  superposition.hpp
ba-graph/include/structures/: permutation.hpp  trail.hpp
ba-graph/include/util/: math.hpp  parallel.hpp  system.hpp
ba-graph/resources/graphs/cubic/cages/: cub0006_g04_cage.s6  cub0010_g05_cage.s6  cub0014_g06_cage.s6  cub0030_g08_cage.s6  cub0058_g09_cage.s6  cub0070_g10_cage.s6  cub0112_g11_cage.s6  cub0126_g12_cage.s6  cub0272_g13_cage.s6  cub0384_g14_cage.s6  cub0620_g15_cage.s6  cub0960_g16_cage.s6  cub2176_g17_cage.s6  cub2640_g18_cage.s6  cub6048_g20_cage.s6
ba-graph/resources/graphs/cubic/cubic_cc01_g01/: cubic_cc01_g01.02  cubic_cc01_g01.04  cubic_cc01_g01.06  cubic_cc01_g01.08  cubic_cc01_g01.10  cubic_cc01_g01.12
ba-graph/resources/graphs/cubic/cubic_cc01_g03/: cubic_cc01_g03.06  cubic_cc01_g03.08  cubic_cc01_g03.10  cubic_cc01_g03.12  cubic_cc01_g03.14  cubic_cc01_g03.16
ba-graph/resources/graphs/cubic/cubic_cc01_g04/: cubic_cc01_g04.06  cubic_cc01_g04.08  cubic_cc01_g04.10  cubic_cc01_g04.12  cubic_cc01_g04.14  cubic_cc01_g04.16
ba-graph/resources/graphs/cubic/cubic_cc01_g05/: cubic_cc01_g05.12  cubic_cc01_g05.14  cubic_cc01_g05.16  cubic_cc01_g05.18
ba-graph/resources/graphs/cubic/cubic_cc01_g06/: cubic_cc01_g06.16  cubic_cc01_g06.18  cubic_cc01_g06.20  cubic_cc01_g06.22
ba-graph/resources/graphs/cubic/cubic_cc01_g07/: cubic_cc01_g07.24  cubic_cc01_g07.26  cubic_cc01_g07.28  cubic_cc01_g07.30
ba-graph/resources/graphs/cubic/cubic_cc01_g08/: cubic_cc01_g08.30  cubic_cc01_g08.34  cubic_cc01_g08.36  cubic_cc01_g08.38  cubic_cc01_g08.40
ba-graph/test/: .gitignore  CMakeLists.txt  Makefile  makerc  test_includes.sh  test_list_headers.sh
ba-graph/test/algorithms/: Makefile  test_cyclic_connectivity.cpp  test_matchings.cpp  test_paths.cpp
ba-graph/test/algorithms/isomorphism/: Makefile  test_isomorphism.cpp  test_isomorphism_nauty.cpp
ba-graph/test/algorithms/object_collection/: test_object_collection.cpp
ba-graph/test/algorithms/path_decomposition/: Makefile  test_path_decomposition.cpp  test_shortest_path_heuristic.cpp
ba-graph/test/config/: Makefile  ba_graph.cfg  test_configuration.cpp
ba-graph/test/graphs/: CMakeLists.txt  Makefile  main.cpp  test_basic.cpp  test_bipartite.cpp  test_cpg.cpp  test_snarks.cpp  test_stored_graphs.cpp  test_trees.cpp
ba-graph/test/impl/: 01vertices_edges_halfedges.cpp  02creating_deleting_graph.cpp  03basic_graph_traversals.cpp  04searching.cpp  05graph_constructing_functions.cpp  06mappings.cpp  07renumbering.cpp  CMakeLists.txt  Makefile  all.cpp
ba-graph/test/invariants/: test_colouring.cpp  test_connectivity.cpp  test_degree.cpp  test_distance.cpp  test_girth.cpp
ba-graph/test/io/: test_graph6.cpp  test_oldBA.cpp  test_pregraph.cpp  test_print_nice.cpp
ba-graph/test/multipoles/: test_common_multipoles.cpp  test_join.cpp  test_multipoles.cpp
ba-graph/test/operations/: Makefile  test.cpp  test_add_graph.cpp  test_basic.cpp  test_copies.cpp  test_line_graph.cpp  test_simplification.cpp  test_undo.cpp
ba-graph/test/random/: test_random_graphs.cpp  test_renumber.cpp
ba-graph/test/sat/: Makefile  test_circular_colouring.cpp  test_circumference.cpp  test_cnf.cpp  test_colouring.cpp  test_factors.cpp  test_snarks.cpp  test_solver.cpp  test_solver_bddmsat.cpp  test_solver_cmsat.cpp
ba-graph/test/snarks/: Makefile  test_colouring.cpp  test_colouring_bit_array.cpp  test_colouring_cvd.cpp  test_colouring_kowalik.cpp  test_colouring_nagy.cpp  test_colouring_pd.cpp  test_colouring_pd_signed.cpp  test_products.cpp  test_reductions.cpp  test_superposition.cpp
ba-graph/test/structures/: trail.cpp
ba-graph/test/util/: Makefile  test_math.cpp  test_parallel.cpp  test_system.cpp
code/: .gitignore  README.md  convert_graphs.cpp  (+6 more)
(+270 files in other folders)
